# MiscPrograms

./: .gitignore
DataTableExtractor/DataTableExtractor/: CMakeLists.txt  GenEclipseProject.sh  Run.sh  plot_NBrS_XS_exact_Ar.xml  plot_NBrS_spectra.xml  plot_NBrS_spectra2.xml  plot_NBrS_spectra_Ar.xml  plot_NBrS_spectra_Ar2.xml  plot_NBrS_spectra_Kr.xml  plot_NBrS_spectra_Xe.xml  plot_f_distributions2.xml
DataTableExtractor/DataTableExtractor/include/: GlobalParameters.hh
DataTableExtractor/DataTableExtractor/include/utilities/: GlobalUtilities.hh
DataTableExtractor/DataTableExtractor/source/: GlobalParameters.cc  main.cc
DataTableExtractor/DataTableExtractor/source/utilities/: GlobalUtilities.cc  PolynomialFit.cc
LAr_XS_recalculation/: CMakeLists.txt  Readme.txt  Run.sh  settings.xml
LAr_XS_recalculation/include/: GlobalParameters.hh
LAr_XS_recalculation/include/utilities/: FunctionTable.hh  IntegrationInterval.hh  PolynomialFit.hh
LAr_XS_recalculation/source/: GlobalParameters.cc  main.cc
LAr_XS_recalculation/source/utilities/: FunctionTable.cc  IntegrationInterval.cc
LAr_relaxation_times/: CMakeLists.txt  CompileAndRun.sh  Readme.txt  Run.sh  settings.xml
LAr_relaxation_times/include/: GlobalParameters.hh
LAr_relaxation_times/include/utilities/: FunctionTable.hh  GlobalUtilities.hh  PolynomialFit.hh
LAr_relaxation_times/source/: GlobalParameters.cc  main.cc
LAr_relaxation_times/source/utilities/: GlobalUtilities.cc  PolynomialFit.cc
StructureFactorIntegral/: CMakeLists.txt  Readme.txt  settings.xml
StructureFactorIntegral/include/: GlobalParameters.hh
StructureFactorIntegral/source/: GlobalParameters.cc  main.cc
